<resources>
    <string name="app_name">DietPedia</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="category1">Shock Diets</string>
    <string name="category2">Popular Diets</string>
    <string name="category3">Regional Slimming Diets</string>
    <string name="category4">Custom Diets</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_search">Search</string>
    <string name="search">Search diets</string>
</resources>
